Fix box overflow CSS

--- a/themes/cocoa/static/css/main.css
+++ b/themes/cocoa/static/css/main.css
@@ -724,3 +724,8 @@ section.main .content .markdown tbody tr:nth-child(odd) td,
 section.main .content .markdown tbody tr:nth-child(odd) th {
   background-color: #f7f7f7;
 }
+
+.chroma {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
